# hgit

./: .gitignore  LICENSE  README.md  build.sh  doctest.rb  hgit.cabal  setup.hs
src/: Git.hs
src/Git/: Blob.hs  Commit.hs  Error.hs  Git.hs  Index.hs  Object.hs  Oid.hs  Repository.hs  Result.hs  Tree.hs  TreeBuilder.hs  Types.hs
src/Git/Internal/: Index.hs  Oid.hs  Repository.hs  Result.hs
src/Git/Types/: Arbitrary.hs
tests/: Main.hs  MainDocTest.hs  Test.hs
tests/Test/: Arbitrary.hs  Cases.hs  Git.hs  Test.hs  TestGit.hs  Util.hs
tests/Test/Case/: TestGit.hs  Trace.hs
tests/Test/Cases/: Blob.hs  Commit.hs  Index.hs  Oid.hs  Tree.hs
