Name:                hgit
Version:             0.0
Description:         Git for Haskell
License-file:        LICENSE
License: 	     BSD3
Author:              Sakari Jokinen
Maintainer:          sakariij@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10

test-suite git_test
  main-is: Main.hs
  default-language: Haskell98
  type: exitcode-stdio-1.0
  hs-source-dirs: tests src
  build-depends:
    base >= 4,
    filepath >= 1.2.0.0,
    QuickCheck >= 2.4.0.0,
    test-framework,
    test-framework-quickcheck2,
    hlibgit2,
    directory,
    temporary

library
  default-language: Haskell98
  hs-source-dirs: src 
  build-depends:
    hlibgit2,
    bytestring,
    base
  exposed-modules:
    Git.Commit,
    Git.Repository,
    Git.Oid
  default-extensions: 
    NamedFieldPuns,
    ScopedTypeVariables
