Name:                hgit
Version:             0.0
Description:         Git for Haskell
License-file:        LICENSE
License: 	     BSD3
Author:              Sakari Jokinen
Maintainer:          sakariij@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10

Flag bundled-libgit2
  default: False
  description: Use hlibgit2 with bundled libgit2 (ghci will not work). The alternative is to use a separately installed.

test-suite git_test
  main-is: Main.hs
  default-language: Haskell98
  ghc-options: -Wall -Werror
  type: exitcode-stdio-1.0
  hs-source-dirs: tests src
  build-depends:
    base >= 4,
    filepath >= 1.2.0.0,
    QuickCheck >= 2.4.0.0,
    test-framework,
    test-framework-quickcheck2,
    hlibgit2,
    directory,
    temporary,
    containers,
    bytestring,
    filepath

test-suite doctest
  main-is: MainDocTest.hs
  default-language: Haskell98
  type: exitcode-stdio-1.0
  hs-source-dirs: tests src
  ghc-options: -Wall -Werror -rtsopts -threaded
  build-depends:
    base >= 4,
    filepath >= 1.2.0.0,
    test-framework,
    test-framework-doctest,
    hlibgit2,
    directory,
    temporary,
    containers,
    bytestring,
    filepath

library
  default-language: Haskell98
  ghc-options: -Wall -Werror
  hs-source-dirs: src 
  if !flag(bundled-libgit2)
    extra-libraries : git2
  build-depends:
    hlibgit2,
    bytestring,
    base,
    containers,
    bytestring,
    filepath,
    directory
  exposed-modules:
    Git,
    Git.Commit,
    Git.Repository,
    Git.Oid,
    Git.Index,
    Git.Tree,
    Git.TreeBuilder,
    Git.Types
  default-extensions: 
    NamedFieldPuns,
    ScopedTypeVariables
